# baskets_and_balls

./: README.md
baskets_and_balls/: CMakeLists.txt  baskets.cpp  baskets.h  guibasket.cpp  guibasket.h  jsonloader.cpp  jsonloader.h  logcreater.cpp  logcreater.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametrs.json  test_baskets.cpp
